[project]
name = "blog-writter-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deprecated>=1.3.1",
    "google-adk==1.19.0",
    "pandas>=3.0.1",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
]
